18 May 2012: Wouter
	- improved printout of SSL_ERROR_SYSCALL errors.

2 April 2012: Wouter
	- Remove debug print from update code.
	- Add debug prints to update code.
	- Fix FIONBIO error on windows.

30 March 2012: Wouter
	- windows implementation for update dialog and selfupdate.
	- work on osx update dialog and selfupdate.
	- lint clean.

29 March 2012: Wouter
	- fix exit of panel and threads
	- fix read multiple persist actions in one SSL packet frame.
	- gtk gui to ask for install of new software.  No unix action exists.

26 March 2012: Wouter
	- lock unlock and delete at exit of panel is improved.

15 March 2012: Wouter
	- configure windows detects GetAdaptersAdresses (XP and later).
	- snapshot for test.
	- Fix compatibility with VirtualBox on Windows, that messes with the
	  network adapters.  Solution works on windows XP and later (detected
	  by configure).
	- Fix trayicon on windows high DPI settings to look better.
	- silence connect() http errors, unless verbosity 2.
	- stop other download if one succeeds (happy eyeballs) on selfupdate.

13 March 2012: Wouter
	- self update work.

12 March 2012: Wouter
	- self update work.

9 March 2012: Wouter
	- update osx config to new config template.
	- login-command and login-location man page entries.
	- windows shows browser on login.
	- debug prints removed from http.

8 March 2012: Wouter
	- OSX GUI for no web access dialog.
	- OSX update dnssec-trigger.conf with new url settings.
	- OSX fix the double-window shown bug, bug in NSWindow deminiaturize func.
	- open web browser to login to a hot spot.

7 March 2012: Wouter
	- print syntax error for url config items.
	- skip_http control command.
	- raise dialog to top on GTK.
	- GTK gui for hot spot sign on.
	- workon windows GUI for no web hot spot sign on.

6 March 2012: Wouter
	- Fix memleak in new config url content.
	- Fix probe count when http is done.
	- probe logic that keeps track of http_insecure mode.