@@ -387,7 +387,8 @@ static HANDLE notify_nets(void)
 	/* open it */
 	if(WSALookupServiceBegin(qset, flags, &lookup) != 0) {
 		DWORD r = WSAGetLastError();
-		if(r == RPC_S_SERVER_UNAVAILABLE) {
+		if(r == RPC_S_SERVER_UNAVAILABLE ||
+			r == RPC_S_UNKNOWN_IF) {
 			/* do not log 'RPC server not there yet', that happens
 			 * when we reboot and we came up before xx service */
 			verbose(VERB_ALGO, "WSALookupServiceBegin: %s",
